# glballistic

./: .gitignore  CMakeLists.txt  README.md
examples/compute_raytracing/: main.cpp
examples/hello_triangle/: main.cpp
include/gl/: Buffer.h  gl.h
include/glballistic/: Buffer.h  Framebuffer.h  Misc.h  Renderbuffer.h  Shader.h  State.h  Texture2D.h  VertexArray.h  all.h  gl.h
